--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "pg": "^7.12.1",
     "sequelize": "^5.19.8"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
