--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Todosapp-Backend",
+  "name": "todosapp_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/abdallahokasha/Todosapp-Backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "pg": "^7.12.1",
     "sequelize": "^5.19.8"
   },
